# chronoagent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  alembic.ini  chrono_agent_research.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  experiments.yml  release.yml
alembic/: env.py
alembic/versions/: 001_create_agent_signal_records.py  002_create_allocation_audit_records.py  003_create_escalation_tables.py
configs/: base.yaml  dev.yaml  prod.yaml
configs/experiments/: ablation_no_bocpd.yaml  ablation_no_forecaster.yaml  ablation_no_health_scores.yaml  agentpoison_experiment.yaml  baseline_sentinel.yaml  main_experiment.yaml  signal_validation.yaml
docs/: phase1_decision.md
docs/grafana/: chronoagent_dashboard.json
paper/: bibliography.bib  main.tex
paper/sections/: 00_abstract.tex  01_introduction.tex  02_related_work.tex  03_system_design.tex  04_methodology.tex  05_experiments.tex  06_results.tex  07_discussion.tex  08_conclusion.tex
results/: decision_matrix.csv
results/phase1_agentpoison/: decision_matrix.csv
results/phase1_minja/: decision_matrix.csv
scripts/: __init__.py  seed_memory.py
src/chronoagent/: __init__.py  cli.py  config.py  main.py  retry.py
tests/: conftest.py
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_agents.py  test_allocation_audit_record.py  test_app.py  test_audit_logger.py  test_backends.py  test_capability_weights.py  test_cli.py  test_collector.py  test_config.py  test_dashboard_router.py  test_entropy.py  test_escalation_manager.py  test_escalation_router.py  test_experiment_config_schema.py  test_experiment_configs.py  test_experiment_metrics.py  test_experiment_plots.py  test_experiment_runner.py  test_experiment_tables.py  test_graceful_degradation.py  test_health_endpoint.py  test_kl_divergence.py  test_logging_audit.py  test_memory_integrity.py  test_memory_integrity_e2e.py  test_memory_quarantine.py  test_memory_router.py  test_memory_store.py  test_metrics.py  test_mock_backend.py  test_negotiation.py  test_no_monitoring_baseline.py  test_package_build.py  test_phase4_scorer.py  test_pipeline_graph.py  test_poisoning.py  test_rate_limit_middleware.py  test_retry.py  test_review_router.py  (+6 more)
(+72 files in other folders)
