[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronoagent"
version = "0.1.0"
description = "Temporal health monitoring for LLM multi-agent systems"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ChronoAgent Contributors" }]
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "httpx>=0.28.0",
    "typer>=0.15.0",
    "pyyaml>=6.0.2",
    "ruptures>=1.1.9",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
forecaster = [
    "chronos-forecasting>=1.3.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "hypothesis>=6.115.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "commitizen>=3.31.0",
    "types-PyYAML>=6.0.12",
    "types-redis>=4.6.0",
]
experiments = [
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "pandas>=2.2.0",
]

[project.scripts]
chronoagent = "chronoagent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/chronoagent"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "ruptures.*",
    "matplotlib.*",
    "pandas.*",
    "seaborn.*",
    "torch",
    "torch.*",
    "chronos",
    "chronos.*",
]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "--cov=chronoagent --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/chronoagent"]
omit = ["*/tests/*"]

[tool.commitizen]
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
